<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.biezhi</groupId>
	<artifactId>blade-bbs</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>bladejava Maven Webapp</name>
	<url>http://maven.apache.org</url>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<repositories>
		<repository>
			<id>oss-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.bladejava</groupId>
			<artifactId>blade-core</artifactId>
			<version>1.4.0</version>
		</dependency>
		
		<dependency>
			<groupId>com.bladejava</groupId>
			<artifactId>blade-sql2o</artifactId>
			<version>1.2.9-beta</version>
		</dependency>

		<dependency>
			<groupId>com.bladejava</groupId>
			<artifactId>blade-jetbrick</artifactId>
			<version>1.2.6</version>
		</dependency>
		
		<dependency>
			<groupId>com.bladejava</groupId>
			<artifactId>blade-cache</artifactId>
			<version>1.2.3</version>
		</dependency>
		
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.35</version>
		</dependency>

		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.15</version>
		</dependency>
		
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.5.0-b01</version>
		</dependency>

		<dependency>
			<groupId>org.pegdown</groupId>
			<artifactId>pegdown</artifactId>
			<version>1.5.0</version>
		</dependency>

		<!-- servlet -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>
		
	</dependencies>

	<build>
		<finalName>blade-bbs</finalName>
		<plugins>
	 <plugin>
            <groupId>org.apache.tomcat.maven</groupId>
            <artifactId>tomcat6-maven-plugin</artifactId>
            <version>2.0-SNAPSHOT</version>      
            <configuration>
              <url>http://localhost:8080/manager/html</url> 
              <server>tomcat</server>
            </configuration>       
        </plugin>
        <plugin>
            <groupId>org.apache.tomcat.maven</groupId>
            <artifactId>tomcat7-maven-plugin</artifactId>
            <version>2.0-SNAPSHOT</version>
            <configuration>
                <url>http://localhost:8080/manager/html</url> 
                <server>tomcat</server>
            </configuration>
        </plugin>
			
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.7</version>
				<configuration>
					<webAppSourceDirectory>src/main/webapp</webAppSourceDirectory>
					<scanIntervalSeconds>3</scanIntervalSeconds>
					<contextPath>/blade-bbs</contextPath>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>9000</port>
							<maxIdleTime>30000</maxIdleTime>
						</connector>
					</connectors>
					 <reload>automatic</reload>
   
    <systemProperties>
      <systemProperty>
        <name>org.mortbay.util.URI.charset</name>
        <value>UTF-8</value>
      </systemProperty>
    </systemProperties>
    <jvmArgs>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=256m
      -Dfile.encoding=UTF-8</jvmArgs>
  </configuration>
  <executions>
    <execution>
      <id>start-jetty</id>
      <phase>pre-integration-test</phase>
      <goals>
        <goal>run</goal>
      </goals>
      <configuration>
        <scanIntervalSeconds>3</scanIntervalSeconds>
        <daemon>true</daemon>
      </configuration>
    </execution>
    <execution>
      <id>stop-jetty</id>
      <phase>post-integration-test</phase>
      <goals>
        <goal>stop</goal>
      </goals>
    </execution>
  </executions>
</plugin>

		</plugins>
	</build>
</project>
